# bedrock

./: .gitignore  LICENSE  README.md  package.json
.github/: release-drafter.yml
.github/workflows/: continuous-integration-docs.yml  continuous-integration-front.yml  continuous-integration-typescript.yml  continuous-integration.yml  deploy-docs.yml  mirror.yml  on-release.yml  release-drafter.yml
back/: .env.example  main.py  pyproject.toml  requirements.in  requirements.txt  thirdweb_webhook.py
back/abis/: registrar.json  registry.json
back/runtime/: create_disk_image.sh  index.html
contracts/: L2Registrar.sol
contracts/interfaces/: IL2Registry.sol  IL2Resolver.sol
docs/: .gitignore  CHANGELOG.md  architecture.md  incident-response.md  index.md  introduction.md  package.json  politique-de-tests.md  strategie-qa.md
docs/.vitepress/: config.mts
docs/plans/: incident-response-design.md  incident-response-implementation.md
docs/sdk/: api-reference.md  architecture.md  configuration.md  getting-started.md
epitech/: BETA_TEST_PLAN.md
front/: .env.example  .eslintignore  .eslintrc.yaml  .gitignore  Dockerfile  docker-compose.yml  jest.config.ts  netlify.toml  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
front/.storybook/: main.ts  preview.ts
front/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
front/src/components/: AuthWrapper.tsx  BedrockAccountMenu.tsx  (+16 more)
front/tests/: accessibility.test.ts
gonogo-review/: scenario14.mov
gonogo-review/videos/: scenario11.mov  scenario12.mov  scenario7.mov  scenario8.mov
(+181 files in other folders)
